# logixa_edl_ai

./: .gitignore  README.md  did.md  pubspec.yaml  todo.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
docs/: runtime_gguf_adapter_plan.md  step25_1_engine_client_split_review.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/constants/: app_colors.dart  app_fonts.dart  app_sizes.dart  app_strings.dart
lib/app/data/services/: app_settings_service.dart  engine_client_service.dart  engine_http_core.dart  engine_status_client.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/theme/: app_theme.dart
lib/app/widgets/: core_page.dart
lib/app/widgets/reusable_widgets/: reusable_action_card.dart  reusable_alert_dialog.dart  reusable_button.dart  reusable_chat_bubble.dart  reusable_editor_tab.dart  reusable_model_profile_card.dart  reusable_text.dart  (+8 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
logixa_engine/: .gitignore  Cargo.toml  logixa_engine_config.example.json
logixa_engine/src/: config.rs  main.rs  memory.rs  model_profile.rs  routes.rs  runtime.rs  state.rs
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: dev.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+55 files in other folders)
