[package]
name = "logixa_engine"
version = "0.1.0"
edition = "2021"
description = "Local Rust engine skeleton for Logixa EDL AI."
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "process", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
